--- a/date/2025-06/index.htm
+++ b/date/2025-06/index.htm
@@ -3,18 +3,18 @@
 
 <head>
         <link rel="canonical" href="https://v2ray-node.github.io" />
-    <title>2025-06归档 - V2ray Node免费节点官网</title>
+    <title>2025-06归档 - 第2页 - V2ray Node免费节点官网</title>
         <meta name="keywords" content="2025-06归档V2ray Node免费节点官网" />
-        <meta name="description" content="2025-06归档，当前是第1页" />
+        <meta name="description" content="2025-06归档，当前是第2页" />
         <link rel="icon" href="/assets/website/img/v2ray_node/favicon.ico" type="image/x-icon"/>
 
     <meta name="author" content="V2ray Node免费节点官网">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://v2ray-node.github.io" />
     <meta property="og:site_name" content="V2ray Node免费节点官网" />
-    <meta property="og:title" content="2025-06归档 - V2ray Node免费节点官网" />
+    <meta property="og:title" content="2025-06归档 - 第2页 - V2ray Node免费节点官网" />
     <meta property="og:image" content="/assets/website/img/v2ray_node/favicon.ico" />
-        <meta property="og:description" content="2025-06归档，当前是第1页" />
+        <meta property="og:description" content="2025-06归档，当前是第2页" />
         
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -26,7 +26,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="2025-06归档 - V2ray Node免费节点官网">
+    <meta name="apple-mobile-web-app-title" content="2025-06归档 - 第2页 - V2ray Node免费节点官网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -110,6 +110,58 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row item xcblog-blog-item" data-date="2025-06-11">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-6-11-free-v2ray.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/1be7898f0d880e324373dcd218a1d0f4.webp" alt="「6月11日」最高速度20M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-6-11-free-v2ray.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「6月11日」最高速度20M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了欧洲、美国、香港、日本、新加坡、加拿大、韩国等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-06-10">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-6-10-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/37002d76718f469b4a4e2c3ae6e5a20a.webp" alt="「6月10日」最高速度21.7M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-6-10-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「6月10日」最高速度21.7M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了加拿大、韩国、新加坡、欧洲、香港、美国、日本等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-06-09">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-6-9-free-subscribe-node.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/556b5dbcfe6584f0352cb6fadde73408.webp" alt="「6月9日」最高速度19.1M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-6-9-free-subscribe-node.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「6月9日」最高速度19.1M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了欧洲、日本、香港、美国、新加坡、韩国、加拿大等地区,最高速度可达19.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-06-08">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-6-8-node-share.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/291f39868df7237a0f3ec70e78e9a24b.webp" alt="「6月8日」最高速度22.2M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-6-8-node-share.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「6月8日」最高速度22.2M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了新加坡、欧洲、韩国、日本、香港、加拿大、美国等地区,最高速度可达22.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
                                                         <div class="row item xcblog-blog-item" data-date="2025-06-07">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2025-6-7-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
@@ -188,21 +240,8 @@
                                     <p>这一次的节点更新覆盖了香港、新加坡、日本、韩国、欧洲、美国、加拿大等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                                 </div>
                             </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-06-01">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-6-1-node-share-links.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/576e2849d154a2569f03a0e1904fcf9e.webp" alt="「6月1日」最高速度22.4M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-6-1-node-share-links.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「6月1日」最高速度22.4M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了新加坡、韩国、欧洲、日本、香港、美国、加拿大等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
                             
-                                                    </div>
+                            <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/date/2025-06/page-2.htm">2</a></li> <li><a href="/date/2025-06/page-2.htm">&raquo;</a></li></ul>                        </div>
                     </div>
                     <div class="col-md-3">
                         <div class="panel panel-default">
@@ -211,16 +250,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-6-6-node-share.htm" title="「6月6日」最高速度22.6M/S，2025年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接">「6月6日」最高速度22.6M/S，2025年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-25-clash-v2ray-ss-ssr.htm" title="「5月25日」最高速度20.5M/S，2025年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接">「5月25日」最高速度20.5M/S，2025年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-28-node-share-links.htm" title="「5月28日」最高速度18.7M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接">「5月28日」最高速度18.7M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-17-free-high-speed-nodes.htm" title="「5月17日」最高速度18.5M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接">「5月17日」最高速度18.5M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-5-node-share.htm" title="「6月5日」最高速度19M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「6月5日」最高速度19M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-7-free-v2ray.htm" title="「5月7日」最高速度22.4M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「5月7日」最高速度22.4M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-8-free-v2ray.htm" title="「5月8日」最高速度18.1M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「5月8日」最高速度18.1M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-4-free-node-subscribe-links.htm" title="「5月4日」最高速度19.8M/S，2025年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接">「5月4日」最高速度19.8M/S，2025年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-27-free-v2ray.htm" title="「5月27日」最高速度19.4M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接">「5月27日」最高速度19.4M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-29-free-v2ray.htm" title="「5月29日」最高速度22.5M/S，2025年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接">「5月29日」最高速度22.5M/S，2025年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-16-free-v2ray.htm" title="「5月16日」最高速度20.7M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「5月16日」最高速度20.7M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-6-7-clash-v2ray-ss-ssr.htm" title="「6月7日」最高速度18.1M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「6月7日」最高速度18.1M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-9-free-subscribe-node.htm" title="「6月9日」最高速度19.1M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「6月9日」最高速度19.1M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-5-node-share.htm" title="「6月5日」最高速度19M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「6月5日」最高速度19M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-26-free-high-speed-nodes.htm" title="「5月26日」最高速度21.9M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接">「5月26日」最高速度21.9M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-8-free-v2ray.htm" title="「5月8日」最高速度18.1M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「5月8日」最高速度18.1M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-2-free-v2ray.htm" title="「6月2日」最高速度18.3M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接">「6月2日」最高速度18.3M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-111500.htm" title="兽药排名前十强 兽药排名前十强正规厂家">兽药排名前十强 兽药排名前十强正规厂家</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-23-clash-v2ray-ss-ssr.htm" title="「5月23日」最高速度22M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「5月23日」最高速度22M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -232,7 +271,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">7</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">11</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">33</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
