--- a/free-nodes/2025-6-7-clash-v2ray-ss-ssr.htm
+++ b/free-nodes/2025-6-7-clash-v2ray-ss-ssr.htm
@@ -138,6 +138,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                 <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2025-6-6-node-share.htm">「6月6日」最高速度22.6M/S，2025年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接</a></p>
+                                        <p>下一个：<a href="/free-nodes/2025-6-8-node-share.htm">「6月8日」最高速度22.2M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -166,15 +167,15 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-5-26-free-high-speed-nodes.htm" title="「5月26日」最高速度21.9M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接">「5月26日」最高速度21.9M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-17-free-high-speed-nodes.htm" title="「5月17日」最高速度18.5M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接">「5月17日」最高速度18.5M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-7-clash-v2ray-ss-ssr.htm" title="「6月7日」最高速度18.1M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「6月7日」最高速度18.1M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-3-clash-v2ray-ss-ssr.htm" title="「6月3日」最高速度18M/S，2025年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接">「6月3日」最高速度18M/S，2025年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-18-free-subscribe-node.htm" title="「5月18日」最高速度22.8M/S，2025年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接">「5月18日」最高速度22.8M/S，2025年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-27-free-v2ray.htm" title="「5月27日」最高速度19.4M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接">「5月27日」最高速度19.4M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-24-free-v2ray-subscribe.htm" title="「5月24日」最高速度20.5M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接">「5月24日」最高速度20.5M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-30-free-v2ray-subscribe.htm" title="「5月30日」最高速度21.1M/S，2025年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接">「5月30日」最高速度21.1M/S，2025年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-5-13-free-subscribe-node.htm" title="「5月13日」最高速度19.8M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接">「5月13日」最高速度19.8M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-31-free-node-subscribe-links.htm" title="「5月31日」最高速度21.4M/S，2025年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接">「5月31日」最高速度21.4M/S，2025年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-19-free-v2ray.htm" title="「5月19日」最高速度20.2M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「5月19日」最高速度20.2M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-9-free-subscribe-node.htm" title="「6月9日」最高速度19.1M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「6月9日」最高速度19.1M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-20-free-high-speed-nodes.htm" title="「5月20日」最高速度19.4M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「5月20日」最高速度19.4M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-10-node-share-links.htm" title="「5月10日」最高速度19.7M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接">「5月10日」最高速度19.7M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-5-free-v2ray-subscribe.htm" title="「5月5日」最高速度21.4M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「5月5日」最高速度21.4M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-28-node-share-links.htm" title="「5月28日」最高速度18.7M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接">「5月28日」最高速度18.7M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-17-free-high-speed-nodes.htm" title="「5月17日」最高速度18.5M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接">「5月17日」最高速度18.5M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-5-3-node-share.htm" title="「5月3日」最高速度22.6M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接">「5月3日」最高速度22.6M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
@@ -187,7 +188,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">7</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">11</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">33</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
